gallery section on users page fixed aligned correctly

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -44,7 +44,7 @@ h1 {
   background-attachment: fixed;
 }
 
-.bg::before {
+/* .bg::before {
   content: "";
   position: absolute;
   top: 0;
@@ -52,7 +52,7 @@ h1 {
   width: 100%;
   height: 100%;
   background: #ffffffcf;
-}
+} */
 
 .block-white {
     background-color: #fff;
@@ -401,6 +401,10 @@ background-color: #fafafa;
     width: 100px;
     object-fit: cover;
 }
+
+/* .wrapper {
+    margin: 0px 15px;
+} */
 
 .wrapper img {
     max-height: 150px;
